Add Agent list view
Show list of current Agents which auto-refreshes on view change and on new Agent creation.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
                 <button type="submit">Create Agent</button>
             </form>
         </div>
+        
+        <!-- Agent List Section -->
+        <div class="agent-list-section">
+            <h4>Current Agents</h4>
+            <ul id="agentList"></ul>
+        </div>
     </div>
 
     <!-- Agent View -->
