--- a/index.html
+++ b/index.html
@@ -179,6 +179,25 @@
         </div>
     </div>
 
+    <div id="editAgentModal" class="modal hidden">
+        <div class="modal-content">
+            <h2>Edit Agent</h2>
+            <form id="editAgentForm">
+                <div class="form-group username-group">
+                    <label for="editAgentUsername">Username</label>
+                    <input type="text" id="editAgentUsername" required>
+                </div>
+                
+                <div class="form-group password-group">
+                    <label for="editAgentPassword">New Password (leave empty to keep current)</label>
+                    <input type="password" id="editAgentPassword">
+                </div>
+                
+                <button type="submit">Update Agent</button>
+                <button type="button" id="cancelEditAgent">Cancel</button>
+            </form>
+        </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
 </body>
 </html>
