--- a/index.html
+++ b/index.html
@@ -198,6 +198,27 @@
             </form>
         </div>
     </div>
+
+    <div id="editProductModal" class="modal hidden">
+        <div class="modal-content">
+            <h2>Edit Product</h2>
+            <form id="editProductForm">
+                <div class="form-group name-group">
+                    <label for="editProductName">Product Name</label>
+                    <input type="text" id="editProductName" required>
+                </div>
+                
+                <div class="form-group price-group">
+                    <label for="editProductPrice">Product Price</label>
+                    <input type="number" id="editProductPrice" min="0" required>
+                </div>
+                
+                <button type="submit">Update Product</button>
+                <button type="button" id="cancelEditProduct">Cancel</button>
+            </form>
+        </div>
+    </div>
+
     <script type="module" src="/src/main.js"></script>
 </body>
 </html>
