Add date picker in Agent panel

--- a/index.html
+++ b/index.html
@@ -177,6 +177,17 @@
             <span>Welcome, <span id="agentUsername"></span></span>
             <button id="agentLogoutBtn">Logout</button>
         </div>
+        
+        <div class="date-picker-container">
+            <div class="form-group">
+                <label for="invoiceDate">Invoice Date</label>
+                <input type="date" 
+                       id="invoiceDate" 
+                       required 
+                       max="" 
+                       pattern="\d{4}/\d{2}/\d{2}">
+            </div>
+        </div>
     </div>
 
     <div id="editAgentModal" class="modal hidden">
