--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
                        pattern="\d{4}/\d{2}/\d{2}">
             </div>
         </div>
+        <div class="company-selector">
+            <div class="form-group">
+                <label for="companySelect">Select Company</label>
+                <select id="companySelect" required>
+                    <option value="">-- Select a Company --</option>
+                </select>
+            </div>
+        </div>
     </div>
 
     <div id="editAgentModal" class="modal hidden">
